@@ -317,6 +317,7 @@ Simon Wilkinson
 Dan Willemsen
 Jason Willis
 Matt Wilson
+Dan Winship
 Scott Wolchok
 Pui Lam Wong
 Justin Wood
